[project]
name = "cronatron"
version = "260514"
description = "Schedule commands on macOS using launchd — a friendlier interface to `launchctl`."
readme = "README.md"
authors = [{ name = "Jonathan Peacher" }]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "launchd>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
cronatron = "cronatron.main:app"

[project.urls]
Repository = "https://github.com/djpeacher/cronatron"
Issues = "https://github.com/djpeacher/cronatron/issues"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
